--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="MINES CLOTHING" />
     <meta property="og:description" content="Minimalist streetwear. Editorial fashion. Next drop coming soon." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://replit.com/public/images/opengraph.png" />
+    <meta property="og:image" content="/favicon.png" />
 
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="manifest" href="/manifest.json" />
