--- a/client/index.html
+++ b/client/index.html
@@ -8,9 +8,8 @@
     <meta property="og:title" content="MINES CLOTHING" />
     <meta property="og:description" content="Minimalist streetwear. Editorial fashion. Next drop coming soon." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/favicon.png" />
+    <meta property="og:image" content="/attached_assets/generated_images/minimalist_white_sneakers-CT8mvckL.png" />
 
-    <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#000000" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
