--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
 
-    <title>MINES CLOTHING</title>
+    <title>Mines Clothing – Streetwear & Modern Fashion Brand</title>
     <meta property="og:title" content="MINES CLOTHING" />
     <meta property="og:description" content="Minimalist streetwear. Editorial fashion. Next drop coming soon." />
     <meta property="og:type" content="website" />
