Add Google site verification meta tag
- Added Google Search Console verification meta tag to HTML head
- Enables Google to verify site ownership for SEO tools

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
 
     <title>Mines Clothing – Streetwear & Modern Fashion Brand</title>
+    <meta name="google-site-verification" content="mTdULH6aIl4C5FMWcfJPe91IE_RvKFVX7A_c6VrNMKE" />
     <meta property="og:title" content="MINES CLOTHING" />
     <meta property="og:description" content="Minimalist streetwear. Editorial fashion. Next drop coming soon." />
     <meta property="og:type" content="website" />
